add hover transition to images to indicate clickability

--- a/css/style.css
+++ b/css/style.css
@@ -1146,6 +1146,14 @@ Work Page Specific
 	margin-bottom: 0;
 }
 
+#line-mock a {
+	transition: opacity 0.3s ease 0s;
+}
+
+	#line-mock a:hover {
+	  opacity: .8;
+	}
+
 #line-mock img {
 	  	width:100%;
 	  	margin-bottom: 2em;
